<resources>
    <string name="app_name">MyApp</string>
    <string name="caf">Café</string>
    <string name="caf_bad_lico">Café Badílico</string>
    <string name="avalia_o">avaliação</string>
    <string name="_413">(413)</string>
    <string name="italian_caf">Italian, Café)</string>
    <string name="o_melhor_caf_da_regi_o_feito_com_muito_carinho">O melhor café da região, feito com muito carinho.</string>
    <string name="nossos_hor_rios">Nossos horários:</string>
    <string name="_4_5">4.5</string>
    <string name="moeda">$</string>
</resources>