<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/idCardView"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/caf"
                android:src="@drawable/cafe" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caf_bad_lico" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/avalia_o"
                    android:numStars="5"
                    android:stepSize="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_413" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moeda" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/italian_caf" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o_melhor_caf_da_regi_o_feito_com_muito_carinho" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nossos_hor_rios" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnP1"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/botao"
                    android:contentDescription="p1"
                    android:text="17:30"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnP2"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/botao"
                    android:contentDescription="p2"
                    android:text="19:30"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnP3"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/botao"
                    android:contentDescription="p3"
                    android:text="20:00"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnP4"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/botao"
                    android:contentDescription="p4"
                    android:text="21:00"
                    android:textSize="10sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnReserve"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:contentDescription="Reserve"
                android:text="Reserve"
                android:textSize="10sp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>